# langmuir

./: .gitignore  AGENTS.md  data_gixd.py  data_gixos.py  plot_gixd.py  plot_gixos.py  process_gixd.py  process_gixos.py  pyproject.toml  run_gixd.sh  validate_data.py
data/1/: gixd.yaml  gixos.yaml
data/2/: gixd.yaml  gixos.yaml
utils/data/: gixd.py
utils/fit/: gixd.py  gixos.py
